--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springmvc01-serlvet</module>
+        <module>springmvc02-hellomvc</module>
+        <module>springmvc02-2-reset</module>
     </modules>
 
     <dependencies>
