--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>springmvc01-serlvet</module>
         <module>springmvc02-hellomvc</module>
         <module>springmvc02-2-reset</module>
+        <module>springmvc03-anno</module>
+        <module>springmvc04-controller</module>
     </modules>
 
     <dependencies>
@@ -47,5 +49,27 @@
             <version>1.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properites</include>
+                    <include>**/8.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+
+    </build>
 
 </project>
